syntax = "proto2";
package protos.Grpc.header;

message FawkesReq {
    optional string appkey = 1;
    optional string env = 2;
}